# xc8plusplus

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TEST-RESULTS.md  codecov.yml  complete_test.c  complete_test_with_main.c  cpp_module.cpp  mkdocs.yml  pyproject.toml  requirements.txt  test_main.c  test_with_main.c
.github/: ACTION_UPDATES.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
build-scripts/: cpp2c.ps1  research.ps1  research.sh  xc8++.ps1
docs/: api.md  building-native.md  building.md  implementation.md  index.md  inheritance-guide.md  libtooling-implementation.md  memory-constraints.md  quick-start.md  research-findings.md  why-python-is-wrong.md  xc8-architecture.md  xc8-source-research.md
examples/: USAGE.md  advanced_features_test.cpp  complete_test.cpp  comprehensive_test.cpp  demo.py  inheritance_test.cpp  minimal.cpp  sensor.c  simple_class.cpp  simple_comprehensive_test.cpp  simple_inheritance_demo.cpp
examples/arduino-multi/: button.cpp  button.hpp  device_config.h  led.cpp  led.hpp  main.cpp  pin_manager.c  pin_manager.h  timer0.cpp  timer0.hpp
mock_includes/: xc.h
research/: analyze-xc8.ps1  gcc-test.ps1  memory-test.c  memory-test.cpp
src/: CMakeLists.txt  CppToCCheck.cpp  CppToCCheck.h  XC8Transpiler.cpp  xc8_architecture_demo.py  xc8_transpiler.py
src/xc8plusplus/: __init__.py  __main__.py  architecture_demo.py  cli.py  transpiler.py
src/xc8plusplus/transpilers/: __init__.py  native_backend.py  python_backend.py  unified_transpiler.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_inheritance.py  test_integration.py  test_transpiler.py
xc8plusplus/: __init__.py
