[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xc8plusplus"
version = "0.1.0"
description = "C++ to C transpiler for Microchip XC8 compiler"
readme = "README.md"
license = "Apache-2.0 WITH LLVM-exception"
authors = [
    { name = "Sébastien Celles", email = "s.celles@gmail.com" },
]
keywords = [
    "microchip",
    "xc8",
    "pic",
    "microcontroller",
    "cpp",
    "transpiler",
    "embedded",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Topic :: System :: Hardware",
]
requires-python = ">=3.8"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-click>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/s-celles/xc8plusplus"
Documentation = "https://s-celles.github.io/xc8plusplus"
Repository = "https://github.com/s-celles/xc8plusplus"
Issues = "https://github.com/s-celles/xc8plusplus/issues"

[project.scripts]
xc8plusplus = "xc8plusplus.cli:main"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/examples",
    "/research",
    "/build-scripts",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xc8plusplus"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
force_sort_within_sections = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/xc8plusplus --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/xc8plusplus"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
